Fix onLoad flickering for popover elements

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,7 @@
 @import 'mixin';
 
+@include popoverjs(16px, 10px, 16px, 5px);
+
 .popoverjs {
   height: 1px;
   opacity: 0;
